Split ingredients of shaped and shapeless crafting recipes and made them more secure and less likely to make sure the settings are valid.